# SAvVy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.b7fa4b4  README.md  SAvVy.pro  main.cpp  resources.qrc  savvywindow.cpp  savvywindow.h  savvywindow.ui
cmake/: FindQwt.cmake  FindStir.cmake  Findstir.cmake  LibFindMacros.cmake  qwt.txt.in  stir.txt.in
docs/: Doxyfile.in
src/: CMakeLists.txt
src/IO/: CMakeLists.txt  io_manager.h
src/display/: .directory  CMakeLists.txt  colormaps_display.h  common_display.h  ctrl_levels.cpp  ctrl_levels.h  ctrl_levels.ui  display_container.cpp  display_container.h  display_container_1d.cpp  display_container_1d.h  display_container_2d.cpp  display_container_2d.h  display_container_3d.cpp  display_container_3d.h  display_container_bar.cpp  display_container_bar.h  display_container_raster.cpp  display_container_raster.h  display_manager.cpp  display_manager.h  display_manager.ui  histogram_manager.cpp  histogram_manager.h  histogram_manager.ui  panel_opened_file_controls.cpp  panel_opened_file_controls.h  panel_opened_file_controls.ui
src/gui/: .directory  CMakeLists.txt  aboutdialog.ui  controls2dimage.cpp  controls2dimage.h  controls2dimage.ui  controls3dimage.cpp  controls3dimage.h  controls3dimage.ui  controls_display_1d.cpp  controls_display_1d.h  controls_display_1d.ui  controls_display_2d.cpp  controls_display_2d.h  controls_display_2d.ui  panel_displayed_files.cpp  panel_displayed_files.h  panel_displayed_files.ui  panel_opened_file_controls.cpp  panel_opened_file_controls.h  panel_opened_file_controls.ui  panel_opened_files.cpp  panel_opened_files.h  panel_opened_files.ui  pluginsdialog.cpp  pluginsdialog.h  pluginsdialog.ui  savvy_settings.cpp  savvy_settings.h  savvy_settings.ui  savvywindow.cpp  savvywindow.h  savvywindow.ui  stackprocessorUI.cpp  stackprocessorUI.h  stackprocessorUI.ui  watchdog.cpp  watchdog.h  workspace.cpp  workspace.h  (+1 more)
src/include/: external_interface.h  savvy.h
src/test/: CMakeLists.txt  guitests.cpp  guitests.h  notsosimple_guitests.cpp  notsosimple_guitests.h  simple_guitests.cpp  simple_guitests.h  test_conversions.cpp  test_display_container.cpp
src/tools/: CMakeLists.txt  ToolManager.cpp  ToolManager.h  ToolManager.inl  imageprocessor.cpp  imageprocessor.h  stackprocessor.cpp  stackprocessor.h  stackprocessor.ui  stackprocessorsplit.cpp  stackprocessorsplit.h  tool.cpp  tool.h
test_data/: atten_im.hv
